cluster/apps/home-system/home-assistant/app/deployment.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/deployment-apps-v1.json
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-system
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities: { drop: ["ALL"] }
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: main
          image: ghcr.io/onedr0p/home-assistant:2024.10.1@sha256:04614835418d2bdacd64685b516e58e7c5446f72485d446e7635282ba1a06c43
          imagePullPolicy: IfNotPresent
          probes:
            liveness:
              enabled: false
            readiness:
              enabled: false
            startup:
              enabled: false
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: logs
              mountPath: /config/logs
            - name: tts
              mountPath: /config/tts
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config-home-assistant
        - name: logs
          emptyDir: {}
        - name: tts
          emptyDir: {}
