cluster/apps/home-system/home-assistant/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-system
spec:
  selector:
    app: home-assistant
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
